Corrected the typos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ No commits yet
 Changes to be committed:
   (use "git rm --cached <file>..." to unstage)
 
-	new file:   index.html      <!--이 부분이 초록색으로 되어있을때는 index.html이 오라갈 준비가 되어진 것을 확인할 수 있다.-->
+	new file:   index.html      <!--이 부분이 초록색으로 되어있을때는 index.html이 올라갈 준비가 되어진 것을 확인할 수 있다.-->
 
 <!--'git commit -m "commit명"은 github에 올라갈 commit명을 적어주는것. 첫글자는 무조건 대문자로 해야된다.-->
 bagchanmiui-MBP:Git parkchanmi$ git commit -m "First test"
